# gpt2_irc_bot

./: .gitignore  get_dataset_from_reddit.py  irc_bot.py  pyproject.toml  train_bot.py
